[workspace]
resolver = "2"

members = [
    "examples/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tokio Tutorial Patterns Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mstampfer/Tokio_Tutorial_Patterns_and_Use_Cases"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = "0.3"
tokio-stream = "0.1"
